--- a/env/HERA.env
+++ b/env/HERA.env
@@ -103,6 +103,16 @@ elif [ $step = "eupd" ]; then
     [[ $NTHREADS_ENKF -gt $nth_max ]] && export NTHREADS_ENKF=$nth_max
     export APRUN_ENKF="$launcher"
 
+# ==== liaofan on 2020.05.06 =====
+elif [ $step = "eupdfsoi" ]; then
+
+    nth_max=$(($npe_node_max / $npe_node_eupdfsoi))
+
+    export NTHREADS_ENKF=${nth_eupdfsoi:-$nth_max}
+    [[ $NTHREADS_ENKF -gt $nth_max ]] && export NTHREADS_ENKF=$nth_max
+    export APRUN_ENKF="$launcher"
+# ================================
+
 elif [ $step = "fcst" ]; then
 
     nth_max=$(($npe_node_max / $npe_node_fcst))
