added/modified scripts for adding the task of gdasesfcfsoi

--- a/env/HERA.env
+++ b/env/HERA.env
@@ -183,6 +183,21 @@ elif [ $step = "esfc" ]; then
     [[ $NTHREADS_CYCLE -gt $npe_node_max ]] && export NTHREADS_CYCLE=$npe_node_max
     export APRUN_CYCLE="$launcher -n $npe_esfc"
 
+# === Edited by liaofan on 2020.05.18 ========================================
+elif [ $step = "esfcfsoi" ]; then
+
+    nth_max=$(($npe_node_max / $npe_node_esfcfsoi))
+
+    export NTHREADS_ESFC=${nth_esfcfsoi:-$nth_max}
+    [[ $NTHREADS_ESFC -gt $nth_max ]] && export NTHREADS_ESFC=$nth_max
+    export APRUN_ESFC="$launcher -n $npe_esfcfsoi"
+
+    export NTHREADS_CYCLE=${nth_cycle:-14}
+    [[ $NTHREADS_CYCLE -gt $npe_node_max ]] && export NTHREADS_CYCLE=$npe_node_max
+    export APRUN_CYCLE="$launcher -n $npe_esfcfsoi"
+# ============================================================================		
+	
+
 elif [ $step = "epos" ]; then
 
     nth_max=$(($npe_node_max / $npe_node_epos))
