--- a/env/HERA.env
+++ b/env/HERA.env
@@ -171,6 +171,24 @@ elif [ $step = "ecen" ]; then
     [[ $NTHREADS_CALCINC -gt $nth_max ]] && export NTHREADS_CALCINC=$nth_max
     export APRUN_CALCINC="$launcher"
 
+# === Edited by liaofan on 2020.05.20 ========================================
+elif [ $step = "ecenfsoi" ]; then
+
+    nth_max=$(($npe_node_max / $npe_node_ecenfsoi))
+
+    export NTHREADS_ECEN=${nth_ecenfsoi:-$nth_max}
+    [[ $NTHREADS_ECEN -gt $nth_max ]] && export NTHREADS_ECEN=$nth_max
+    export APRUN_ECEN="$launcher"
+
+    export NTHREADS_CHGRES=${nth_chgres:-12}
+    [[ $NTHREADS_CHGRES -gt $npe_node_max ]] && export NTHREADS_CHGRES=$npe_node_max
+    export APRUN_CHGRES="time"
+
+    export NTHREADS_CALCINC=${nth_calcinc:-1}
+    [[ $NTHREADS_CALCINC -gt $nth_max ]] && export NTHREADS_CALCINC=$nth_max
+    export APRUN_CALCINC="$launcher"
+# ============================================================================	
+	
 elif [ $step = "esfc" ]; then
 
     nth_max=$(($npe_node_max / $npe_node_esfc))
