--- a/env/HERA.env
+++ b/env/HERA.env
@@ -143,6 +143,21 @@ elif [ $step = "efcs" ]; then
     [[ $NTHREADS_REGRID_NEMSIO -gt $nth_max ]] && export NTHREADS_REGRID_NEMSIO=$nth_max
     export APRUN_REGRID_NEMSIO="$launcher $LEVS"
 
+# ==== liaofan on 2020.05.26 =====
+elif [ $step = "efcsfsoi" ]; then
+
+    nth_max=$(($npe_node_max / $npe_node_efcsfsoi))
+
+    export NTHREADS_FV3=${nth_efcsfsoi:-$nth_max}
+    [[ $NTHREADS_FV3 -gt $nth_max ]] && export NTHREADS_FV3=$nth_max
+    export cores_per_node=$npe_node_max
+    export APRUN_FV3="$launcher"
+
+    export NTHREADS_REGRID_NEMSIO=${nth_regrid_nemsio:-1}
+    [[ $NTHREADS_REGRID_NEMSIO -gt $nth_max ]] && export NTHREADS_REGRID_NEMSIO=$nth_max
+    export APRUN_REGRID_NEMSIO="$launcher $LEVS"
+# ================================	
+	
 elif [ $step = "post" ]; then
 
     nth_max=$(($npe_node_max / $npe_node_post))
