add task gdaseposfsoi

--- a/env/HERA.env
+++ b/env/HERA.env
@@ -240,6 +240,16 @@ elif [ $step = "epos" ]; then
     [[ $NTHREADS_EPOS -gt $nth_max ]] && export NTHREADS_EPOS=$nth_max
     export APRUN_EPOS="$launcher"
 
+# === Edited by liaofan on 2020.06.03 ========================================
+elif [ $step = "eposfsoi" ]; then
+
+    nth_max=$(($npe_node_max / $npe_node_eposfsoi))
+
+    export NTHREADS_EPOS=${nth_eposfsoi:-$nth_max}
+    [[ $NTHREADS_EPOS -gt $nth_max ]] && export NTHREADS_EPOS=$nth_max
+    export APRUN_EPOS="$launcher"
+# ============================================================================		
+	
 elif [ $step = "fv3ic" ]; then
 
     export NTHREADS_CHGRES=${nth_chgres:-$npe_node_max}
